2000-04-21 Garry R. Osgood <gosgood@idt.net>

	* app/main.c
	* libgimp/Makefile.am
	* libgimp/gimp.c
	* libgimp/gimpsignal.c (New )
	* libgimp/gimpsignal.h (New )
	Patch by Austin Donnelly <austin@gimp.org> to address #2742. (I took
	the liberty of moving it to libgimp for general consumption, & fixed a
	typo) SYS5R4 unix's were failing when signals arrived at processes in
	system calls, a behavior in accordance with POSIX specs. Patch
	introduces a gimp_signal_private() workalike replacement for
	signal(2), layered over sigaction(2) which internally requests the
	signal environment to restart system calls instead of failing. This is
	POSIX spec 1170 extension behavior, but one that appears to be generally
	supported. Thanks due to Tim Mooney <mooney@dogbert.cc.ndsu.nodak.edu>
	for testing this on various flavors of OSF/1 boxes where #2742 seemed
	especially common.

2000-04-20  Nick Lamb  <njl195@zepler.org.uk>

	* plug-ins/common/png.c: Revert Sven's changes, I am
 	not that silly Sven, read the code more carefully
 	and THINK about it.  We do not want to leak Gimp
 	Images.

2000-04-20  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/align_layers.c: applied patch provided by
	KANDA Toshihiro <candy@ops.dti.ne.jp>. Should fix bug #7329.

2000-04-20  Sven Neumann <sven@gimp.org>
	
	* plug-ins/common/bumpmap.c: correctly initialize the bumpmap 
	offsets

	* plug-ins/common/png.c: (load_image) if the PNG cannot be loaded, 
	return -1 instead of some uninitialized integer

2000-04-20  Michael Natterer  <mitch@gimp.org>

	* gimprc.in
	* app/gimprc.c: default to restore_session == TRUE so first time
	users really see the automatically opened dialogs.

	* app/session.[ch]: also open "Tool Options" if no sessionrc
	exists. Moved the harcoded initial positions away from the top and
	left edges of the screen to avoid dialogs which appear underneath
	panels. Also arranged the four default dialogs non-overlapping.

2000-04-20  Michael Natterer  <mitch@gimp.org>
